Added framework for web xml clients

--- a/CHIPSApp/AndroidManifest.xml
+++ b/CHIPSApp/AndroidManifest.xml
@@ -16,7 +16,7 @@
             </intent-filter>
         </activity>
         
-        <activity android:name="SearchFoodActivity" >
+        <activity android:name=".SearchFoodActivity" >
         </activity>
     </application>
 </manifest>
