Added an abstract activity for home icon and skeleton inventory add

--- a/CHIPSApp/AndroidManifest.xml
+++ b/CHIPSApp/AndroidManifest.xml
@@ -35,5 +35,7 @@
         <activity android:name=".StatisticsActivity"
                   android:theme="@android:style/Theme.NoTitleBar">
         </activity>
+        <activity android:name="AddFoodToInventoryActivity"
+                  android:theme="@android:style/Theme.NoTitleBar"></activity>
     </application>
 </manifest>
