--- a/CHIPSApp/AndroidManifest.xml
+++ b/CHIPSApp/AndroidManifest.xml
@@ -37,5 +37,7 @@
         </activity>
         <activity android:name="AddFoodToInventoryActivity"
                   android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity android:name="FavoritesActivity"
+                  android:theme="@android:style/Theme.NoTitleBar"></activity>
     </application>
 </manifest>
