--- a/CHIPSApp/AndroidManifest.xml
+++ b/CHIPSApp/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity android:name=".CalendarActivity"
                   android:theme="@android:style/Theme.NoTitleBar">
         </activity>
-        <activity android:name=".InventoryActivity"
+        <activity android:name="InventoryActivity"
                   android:theme="@android:style/Theme.NoTitleBar">
         </activity>
         <activity android:name=".PreferencesActivity"
