--- a/CHIPSApp/AndroidManifest.xml
+++ b/CHIPSApp/AndroidManifest.xml
@@ -39,5 +39,7 @@
                   android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name="FavoritesActivity"
                   android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity android:name="LoginActivity"
+                  android:theme="@android:style/Theme.NoTitleBar"></activity>
     </application>
 </manifest>
