--- a/CHIPSApp/AndroidManifest.xml
+++ b/CHIPSApp/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name="ApplicationHubActivity"
+        <activity android:name="LaunchActivity"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity android:name="ApplicationHubActivity"
+                  android:theme="@android:style/Theme.NoTitleBar">
+        </activity>
         <activity android:name=".SearchFoodActivity" 
                   android:theme="@android:style/Theme.NoTitleBar">
         </activity>
@@ -39,7 +41,8 @@
                   android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name="FavoritesActivity"
                   android:theme="@android:style/Theme.NoTitleBar"></activity>
-        <activity android:name="LoginActivity"
+        <activity android:name=".LoginActivity"
                   android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity android:name="RegisterActivity"></activity>
     </application>
 </manifest>
