Added basic scrolling gallery to application hub

--- a/CHIPSApp/AndroidManifest.xml
+++ b/CHIPSApp/AndroidManifest.xml
@@ -45,6 +45,6 @@
                   android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".LoginActivity"
                   android:theme="@android:style/Theme.NoTitleBar"></activity>
-        <activity android:name="RegisterActivity"></activity>
+        <activity android:name=".RegisterActivity"></activity>
     </application>
 </manifest>
