--- a/CHIPSApp/AndroidManifest.xml
+++ b/CHIPSApp/AndroidManifest.xml
@@ -41,7 +41,9 @@
                   android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name="AddFoodToFavoriteMealActivity"
                   android:theme="@android:style/Theme.NoTitleBar"></activity>
-        <activity android:name="FavoritesActivity"
+        <activity android:name=".AddMealToFavoritesActivity"
+                  android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity android:name=".FavoritesActivity"
                   android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".LoginActivity"
                   android:theme="@android:style/Theme.NoTitleBar"></activity>
